--- a/projet2.css
+++ b/projet2.css
@@ -1,9 +1,15 @@
 body{
+    background-color: rgba(0, 0, 0, 0.336);
 	background-image: url(ressources/ide/fondide.gif);
 	background-size: cover;
 	background-attachment: fixed;
 	font-family: 'Grenze Gotisch', cursive;
 
+}
+.container{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.438);
 }
 h1{
 	color: lightgreen;
